picture path fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </br>
      <div class="image">
        <h3>3. Assignment(Links & Images):</h3>
-         <img src="../images/first-img.png" alt="Concert with a big stage and a crowd in front of it.">
+         <img src="./images/first-img.png" alt="Concert with a big stage and a crowd in front of it.">
      </div>
 
 </body>
