--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=4.0">
+    
     <title>Links & Images</title>
 </head>
 <body>
-  <h1>Brenda's website</h1>
+  <h1 style='color:blue;font-size:46px;'>Brenda's website</h1>
 
   <a href="./pages/about.html">About Me</a>
   </br>
+
+      <div class='headers-div'> 
+          <h1></h1>
+          <h2></h2>
+          <h3></h3>
+          <h4></h4>
+
+      </div>
      <div class="image">
        <h3>3. Assignment(Links & Images):</h3>
          <img src="./images/first-img.png" alt="Concert with a big stage and a crowd in front of it.">
