--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=4.0">
-    
+    <link rel="stylesheet" href="./pages/style.css">
     <title>Links & Images</title>
 </head>
 <body>
-  <h1 style='color:blue;font-size:46px;'>Brenda's website</h1>
+  <h1 style='color:purple;font-size:46px'>BRENDA'S WEBSITE</h1>
 
-  <a href="./pages/about.html">About Me</a>
+  <a class="about" href="./pages/about.html">ABOUT ME</a>
   </br>
+    
+  <h2>2. Assignment (Colors) - 2nd week:</h2>
 
       <div class='headers-div'> 
-          <h1></h1>
-          <h2></h2>
-          <h3></h3>
-          <h4></h4>
+          <h1>This is an h1</h1>
+          <h2>This is an h2</h2>
+          <h3>This is an h3</h3>
+          <h4>This is an h4</h4>
 
       </div>
      <div class="image">
-       <h3>3. Assignment(Links & Images):</h3>
+       <h2>3. Assignment(Links & Images) - 1st week:</h2>
          <img src="./images/first-img.png" alt="Concert with a big stage and a crowd in front of it.">
      </div>
 
